first executable version with loading java agent